dataSaving support for TeleporterBlock and LocationControllerBlock